Adding allergy, sponsor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,14 +58,13 @@
     <string name="title_register">Novo Registro</string>
     <string name="title_update">Atualizar Registro</string>
     <string name="kid_name">Nome da criança</string>
-    <string name="dad_name">Nome do pai</string>
-    <string name="mom_name">Nome da mãe</string>
-    <string name="dad_email">Email do pai</string>
-    <string name="mom_email">Email da mãe</string>
-    <string name="city_name">Cidade</string>
-    <string name="kid_address">Endereço</string>
+    <string name="sponsor_name">Nome do responsável</string>
+    <string name="sponsor_email">Email do responsável</string>
+    <string name="city">Cidade</string>
+    <string name="address">Endereço</string>
     <string name="class_room">Sala</string>
     <string name="church_name">Nome da igreja</string>
+    <string name="allergy">Alergia</string>
     <string name="cell_phone">Celular</string>
     <string name="boy">Menino</string>
     <string name="girl">Menina</string>
