--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,9 +51,9 @@
     <string name="kid_deleted">Registro removido.</string>
 
     <!-- Strings related to start -->
-    <string name="babies"> Semear Bebês</string>
-    <string name="ebi_ci"> EBI/CI</string>
-    <string name="management"> Gestão</string>
+    <string name="babies">Semear Bebês</string>
+    <string name="ebi_ci">EBI/CI</string>
+    <string name="management">Gestão</string>
 
     <!-- Strings related to management -->
     <string name="from">De:</string>
@@ -63,6 +63,7 @@
     <string name="chalet">Chalé:</string>
     <string name="seed_baby">Semear Bebês</string>
     <string name="seed_kid">Crianças de 4 a 11 anos</string>
+    <string name="save">Salvar</string>
 
     <!-- Strings related to register -->
     <string name="title_register">Novo Registro</string>
