Removing separation AM/PM

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,36 +7,22 @@
     <string name="menu_search">Pesquisar</string>
 
     <string name="all_rooms">Todas as Salas</string>
-    <string name="n1_am">N1 Manhã</string>
-    <string name="n1_pm">N1 Noite</string>
-    <string name="n2_am">N2 Manhã</string>
-    <string name="n2_pm">N2 Noite</string>
-    <string name="n3_am">N3 Manhã</string>
-    <string name="n3_pm">N3 Noite</string>
-    <string name="n4_am">N4 Manhã</string>
-    <string name="n4_pm">N4 Noite</string>
-    <string name="n5_am">N5 Manhã</string>
-    <string name="n5_pm">N5 Noite</string>
-    <string name="n6_am">N6 Manhã</string>
-    <string name="n6_pm">N6 Noite</string>
+    <string name="n1">N1</string>
+    <string name="n2">N2</string>
+    <string name="n3">N3</string>
+    <string name="n4">N4</string>
+    <string name="n5">N5</string>
+    <string name="n6">N6</string>
 
     <string name="all_chalets">Todos os Chalés</string>
-    <string name="chalet3_am">Chalé 3 Manhã</string>
-    <string name="chalet3_pm">Chalé 3 Noite</string>
-    <string name="chalet4_am">Chalé 4 Manhã</string>
-    <string name="chalet4_pm">Chalé 4 Noite</string>
-    <string name="chalet5_am">Chalé 5 Manhã</string>
-    <string name="chalet5_pm">Chalé 5 Noite</string>
-    <string name="chalet6_am">Chalé 6 Manhã</string>
-    <string name="chalet6_pm">Chalé 6 Noite</string>
-    <string name="chalet7_am">Chalé 7 Manhã</string>
-    <string name="chalet7_pm">Chalé 7 Noite</string>
-    <string name="chalet8_am">Chalé 8 Manhã</string>
-    <string name="chalet8_pm">Chalé 8 Noite</string>
-    <string name="chalet9_am">Chalé 9 Manhã</string>
-    <string name="chalet9_pm">Chalé 9 Noite</string>
-    <string name="chalet10_am">Chalé 10 Manhã</string>
-    <string name="chalet10_pm">Chalé 10 Noite</string>
+    <string name="chalet3">Chalé 3</string>
+    <string name="chalet4">Chalé 4</string>
+    <string name="chalet5">Chalé 5</string>
+    <string name="chalet6">Chalé 6</string>
+    <string name="chalet7">Chalé 7</string>
+    <string name="chalet8">Chalé 8</string>
+    <string name="chalet9">Chalé 9</string>
+    <string name="chalet10">Chalé 10</string>
 
     <string name="class_dates">Datas</string>
     <string name="infos">Informações</string>
